--- a/index.html
+++ b/index.html
@@ -14,14 +14,13 @@
         <h1>To-Do List</h1>
         <div class="row">
           <input type="text" placeholder="Enter Your Items Here ..." id="input"/ >
-          <button>ADD</button>
+          <button onclick="Addtask() "  onkeypress=Enter()>ADD</button>
         </div>
-        <ul id="list-container">
-          <li class="checked">Task 1</li>
-          <li>Task 1</li>
-          <li>Task 1</li>
+        <ul id="listContainer">
+          <!-- <li class="checked">Task 1</li>   -->
         </ul>
       </div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
